Bug 460105 - libraw is not found on macos even though installed - build fails
Summary: libraw is not found on macos even though installed - build fails
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kimageformats
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources macOS
: NOR normal
Target Milestone: ---
Assignee: Alex Merry
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-07 23:46 UTC by Kurt Hindenburg
Modified: 2022-10-08 15:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kurt Hindenburg 2022-10-07 23:46:16 UTC
65a20b43 introduced libraw but it doesn't find it on my macos system.

kimageformats/src/imageformats/raw.cpp:25:10: fatal error: 'libraw/libraw.h' file not found

location on my system:
/opt/local/include/libraw/libraw.h
Comment 1 Bug Janitor Service 2022-10-08 00:05:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kimageformats/-/merge_requests/103
Comment 2 Friedrich W. H. Kossebau 2022-10-08 15:24:39 UTC
Git commit 20f74ce5e69f731ba114db410311b0989dd88b17 by Friedrich W. H. Kossebau.
Committed on 08/10/2022 at 00:15.
Pushed by kossebau into branch 'master'.

FindLibRaw: fix include dir, should not contain prefix libraw/

See also the examples at https://www.libraw.org/docs/API-CXX.html

M  +4    -5    cmake/find-modules/FindLibRaw.cmake
M  +0    -4    src/imageformats/raw.cpp

https://invent.kde.org/frameworks/kimageformats/commit/20f74ce5e69f731ba114db410311b0989dd88b17