FindLibRaw: fix include dir, should not contain prefix libraw/

See also the examples at https://www.libraw.org/docs/API-CXX.html

BUG: 460105